Revert "Set left margin for compass to 50px to avoid overlapping main menu."
This reverts commit e0f91bc4160ffec4f4c7a4d1c755deab7d1f96b3.

--- a/source/client/ui/styles.scss
+++ b/source/client/ui/styles.scss
@@ -200,7 +200,7 @@
 .sv-compass {
   position: absolute;
   bottom: 20px;
-  left: 50px;
+  left: 20px;
   pointer-events: auto;
   user-select: none;
   z-index: 100;
